[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/model/player.mesh" type="ArrayMesh" id=1]
[ext_resource path="res://source/entity/player/Player.gd" type="Script" id=2]
[ext_resource path="res://resource/player.tres" type="Resource" id=3]
[ext_resource path="res://assets/texture/materials/player_eyes.tres" type="Material" id=4]
[ext_resource path="res://assets/texture/materials/player_body.tres" type="Material" id=5]
[ext_resource path="res://assets/gui/theme/theme_options.tres" type="Theme" id=6]
[ext_resource path="res://assets/entity/state_controller.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/texture/materials/player_shell.tres" type="Material" id=8]
[ext_resource path="res://source/entity/player/PlayerStateHide.gd" type="Script" id=9]
[ext_resource path="res://resource/animation/PlayerMoveDefault.tres" type="Animation" id=10]
[ext_resource path="res://source/entity/player/PlayerStateIdle.gd" type="Script" id=11]
[ext_resource path="res://source/entity/player/PlayerStateMove.gd" type="Script" id=12]
[ext_resource path="res://source/entity/player/PlayerStateJump.gd" type="Script" id=13]
[ext_resource path="res://source/entity/player/PlayerStateFall.gd" type="Script" id=14]
[ext_resource path="res://source/entity/player/PlayerStateDodg.gd" type="Script" id=15]
[ext_resource path="res://resource/animation/PlayerRollLeft.tres" type="Animation" id=16]
[ext_resource path="res://resource/animation/PlayerRollRight.tres" type="Animation" id=17]
[ext_resource path="res://resource/animation/PlayerIdleDefault.tres" type="Animation" id=18]
[ext_resource path="res://resource/animation/PlayerTuckDefault.tres" type="Animation" id=19]
[ext_resource path="res://resource/animation/PlayerRollFront.tres" type="Animation" id=20]
[ext_resource path="res://resource/animation/PlayerJumpDefault.tres" type="Animation" id=21]
[ext_resource path="res://resource/animation/PlayerHideDefault.tres" type="Animation" id=22]
[ext_resource path="res://resource/animation/PlayerFallDefault.tres" type="Animation" id=23]
[ext_resource path="res://resource/animation/PlayerRollBack.tres" type="Animation" id=25]

[sub_resource type="Skin" id=3]
resource_name = "Skin"
bind_count = 21
bind/0/name = "BoneRoot"
bind/0/bone = -1
bind/0/pose = Transform( 1.8521, 0, -4.50367e-07, -5.26398e-14, 1.88897, -2.25183e-07, 4.41575e-07, 0, 1.88897, -0.0564262, -6.22283e-08, 0.0220091 )
bind/1/name = "BoneEyeballMainController"
bind/1/bone = -1
bind/1/pose = Transform( 1.36171, -1.28039, -5.52776e-08, -2.77266e-07, -1.17394e-14, -1.88897, 1.25539, 1.38882, -3.5724e-07, 0.937677, -1.76256, -1.10033 )
bind/2/name = "BoneEyeballLeftController"
bind/2/bone = -1
bind/2/pose = Transform( 1.8521, 5.62958e-08, 1.46409e-07, 1.4355e-07, 1.62704e-07, -1.88897, -1.10394e-07, 1.88897, -6.24798e-08, 0.340823, -1.76256, -1.44457 )
bind/3/name = "BoneEyeballRightController"
bind/3/bone = -1
bind/3/pose = Transform( 1.8521, 5.62958e-08, 1.13738e-07, 1.11517e-07, 1.50318e-07, -1.88897, -1.10394e-07, 1.88897, -7.48649e-08, -0.397249, -1.76256, -1.44457 )
bind/4/name = "BoneFootWaist"
bind/4/bone = -1
bind/4/pose = Transform( 1.8521, -4.78889e-06, -5.48284e-07, 5.3758e-07, -6.94999e-13, 1.88897, -4.6954e-06, -1.88897, 6.94999e-13, -0.0564262, -0.0470675, 2.02655e-07 )
bind/5/name = "BoneFootTail"
bind/5/bone = -1
bind/5/pose = Transform( 1.8521, -4.66881e-06, -2.74142e-07, 2.6879e-07, 0, 1.88897, -4.57766e-06, -1.88897, 6.77571e-13, -0.0564263, -0.765803, 1.99068e-07 )
bind/6/name = "BoneFootTorso"
bind/6/bone = -1
bind/6/pose = Transform( -1.8521, -4.78889e-06, 2.93723e-07, -2.87989e-07, 0, -1.88897, 4.6954e-06, -1.88897, -7.44642e-13, 0.0564262, 0.0470675, -8.34461e-08 )
bind/7/name = "BoneFootHead"
bind/7/bone = -1
bind/7/pose = Transform( -1.8521, -4.66881e-06, 2.74142e-07, -2.6879e-07, 0, -1.88897, 4.57766e-06, -1.88897, -6.77571e-13, 0.0564262, -0.671668, -7.98589e-08 )
bind/8/name = "BoneEyestalkLeftBottom"
bind/8/bone = -1
bind/8/pose = Transform( 1.83759, 0.230099, -0.0521717, -0.231333, 1.82779, -0.414425, 4.00064e-08, 0.417696, 1.84221, 0.104456, -0.603442, 0.873449 )
bind/9/name = "BoneEyestalkLeftMiddle"
bind/9/bone = -1
bind/9/pose = Transform( 1.83759, 0.230098, -0.0521724, -0.231333, 1.82779, -0.414425, 7.63199e-07, 0.417697, 1.84221, 0.104456, -0.887475, 0.873449 )
bind/10/name = "BoneEyestalkLeftTop"
bind/10/bone = -1
bind/10/pose = Transform( 1.83759, 0.230098, -0.0521722, -0.231333, 1.82779, -0.414425, 6.09328e-07, 0.417697, 1.84221, 0.104456, -1.17151, 0.873449 )
bind/11/name = "BoneEyeballLeftTarget"
bind/11/bone = -1
bind/11/pose = Transform( 1.85192, 1.11498e-06, -0.0265161, -1.02893e-06, 1.88897, 9.91845e-08, 0.0259984, -1.24978e-08, 1.88879, 0.323817, -1.44457, 1.21366 )
bind/12/name = "BoneEyestalkRightBottom"
bind/12/bone = -1
bind/12/pose = Transform( 1.83518, -0.248399, 0.0563984, 0.249748, 1.82526, -0.414446, 3.23744e-06, 0.418266, 1.84209, -0.162039, -0.6075, 0.874593 )
bind/13/name = "BoneEyestalkRightMiddle"
bind/13/bone = -1
bind/13/pose = Transform( 1.83518, -0.2484, 0.0563981, 0.24975, 1.82526, -0.414447, 3.84677e-06, 0.418267, 1.84209, -0.162039, -0.891519, 0.874593 )
bind/14/name = "BoneEyestalkRightTop"
bind/14/bone = -1
bind/14/pose = Transform( 1.83518, -0.248399, 0.0563982, 0.249749, 1.82526, -0.414447, 3.57596e-06, 0.418267, 1.84209, -0.162039, -1.17554, 0.874593 )
bind/15/name = "BoneEyeballRightTarget"
bind/15/bone = -1
bind/15/pose = Transform( 1.85188, 1.14016e-06, 0.0286812, -1.32981e-06, 1.88897, 8.23939e-07, -0.0281213, -7.49243e-07, 1.88876, -0.378847, -1.44457, 1.21489 )
bind/16/name = "BoneShell"
bind/16/bone = -1
bind/16/pose = Transform( 1.8521, 0, 0, 0, 1.88897, 0, 0, 0, 1.88897, -0.0564262, -0.342239, 0.0220091 )
bind/17/name = "BoneEyeballLeft"
bind/17/bone = -1
bind/17/pose = Transform( 1.8521, 0, 0, 0, 0, -1.88897, 0, 1.88897, 0, 0.340823, -1.20899, -1.44457 )
bind/18/name = "BoneEyeballRight"
bind/18/bone = -1
bind/18/pose = Transform( 1.8521, 0, 0, 0, 0, -1.88897, 0, 1.88897, 0, -0.397249, -1.20899, -1.44457 )
bind/19/name = "BoneEyestalkRightController"
bind/19/bone = -1
bind/19/pose = Transform( 1.85188, 0, 0.0286809, 0, 1.88897, 0, -0.028121, 0, 1.88876, -0.339594, -1.19536, 1.17357 )
bind/20/name = "BoneEyestalkLeftController"
bind/20/bone = -1
bind/20/pose = Transform( 1.85192, 0, -0.0265158, 0, 1.88897, 0, 0.0259982, 0, 1.88879, 0.269013, -1.20253, 1.17217 )

[sub_resource type="SphereMesh" id=29]

[sub_resource type="SphereShape" id=28]

[sub_resource type="BoxShape" id=26]

[sub_resource type="BoxShape" id=24]
extents = Vector3( 0.5, 0.5, 0.5 )

[node name="Player" type="KinematicBody"]
collision_mask = 13
script = ExtResource( 2 )
resource = ExtResource( 3 )

[node name="StateController" parent="." instance=ExtResource( 7 )]

[node name="Idle" type="Node" parent="StateController"]
script = ExtResource( 11 )

[node name="Move" type="Node" parent="StateController"]
script = ExtResource( 12 )

[node name="Jump" type="Node" parent="StateController"]
script = ExtResource( 13 )

[node name="Fall" type="Node" parent="StateController"]
script = ExtResource( 14 )

[node name="Hide" type="Node" parent="StateController"]
script = ExtResource( 9 )

[node name="Dodg" type="Node" parent="StateController"]
script = ExtResource( 15 )

[node name="PlayerAvatar" type="Position3D" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.35, 0.3 )

[node name="Skeleton" type="Skeleton" parent="PlayerAvatar"]
transform = Transform( 1.07986, 0, -4.69107e-07, 0, 1.05878, 0, 4.78448e-07, 0, 1.05878, 0, -0.7, -0.3 )
bones/0/name = "BoneRoot"
bones/0/parent = -1
bones/0/rest = Transform( 1, -7.10543e-15, 2.38419e-07, -7.10543e-15, 1, 5.96046e-08, -2.38419e-07, -5.96046e-08, 1, 0.0564262, 5.96046e-08, -0.0220091 )
bones/0/enabled = true
bones/0/bound_children = [  ]
bones/1/name = "BoneEyeballMainController"
bones/1/parent = 0
bones/1/rest = Transform( 0.735225, 5.96046e-08, 0.677823, -0.677823, 0, 0.735225, 5.96046e-08, -1, 5.96046e-08, 2.22787e-07, 1.44457, -1.74055 )
bones/1/enabled = true
bones/1/bound_children = [  ]
bones/2/name = "BoneEyeballLeftController"
bones/2/parent = 1
bones/2/rest = Transform( 0.735225, 1.08668e-07, -0.677823, -2.27211e-07, 1, -8.61332e-08, 0.677823, 2.17336e-07, 0.735225, -0.292067, -6.81868e-08, -0.269265 )
bones/2/enabled = true
bones/2/bound_children = [  ]
bones/3/name = "BoneEyeballRightController"
bones/3/parent = 1
bones/3/rest = Transform( 0.735225, 1.00396e-07, -0.677823, -2.09915e-07, 1, -7.95767e-08, 0.677823, 2.00792e-07, 0.735225, 0.250582, -4.17098e-07, 0.231017 )
bones/3/enabled = true
bones/3/bound_children = [  ]
bones/4/name = "BoneFootWaist"
bones/4/parent = -1
bones/4/rest = Transform( 1, 2.90255e-07, -2.53518e-06, -2.53518e-06, 0, -1, -2.90255e-07, 1, 0, 0.0564262, 5.96046e-08, 0.0470675 )
bones/4/enabled = true
bones/4/bound_children = [  ]
bones/5/name = "BoneFootTail"
bones/5/parent = 4
bones/5/rest = Transform( 1, -1.45127e-07, 6.35732e-08, 1.45127e-07, 1, 9.22608e-15, -6.35732e-08, 1.3976e-19, 1, -2.48583e-09, 0.718735, -1.3118e-14 )
bones/5/enabled = true
bones/5/bound_children = [  ]
bones/6/name = "BoneFootTorso"
bones/6/parent = -1
bones/6/rest = Transform( -1, -1.55494e-07, 2.53518e-06, -2.53518e-06, 0, -1, 1.55494e-07, -1, 0, 0.0564262, 5.96046e-08, 0.0470675 )
bones/6/enabled = true
bones/6/bound_children = [  ]
bones/7/name = "BoneFootHead"
bones/7/parent = 6
bones/7/rest = Transform( 1, -1.03662e-08, 6.35732e-08, 1.03662e-08, 1, -2.56213e-14, -6.35732e-08, 2.62803e-14, 1, 3.59326e-09, 0.718735, -5.23182e-15 )
bones/7/enabled = true
bones/7/bound_children = [  ]
bones/8/name = "BoneEyestalkLeftBottom"
bones/8/parent = 7
bones/8/rest = Transform( -0.992169, 0.124901, -4.32134e-07, 0.0276189, 0.219391, -0.975246, -0.121809, -0.967609, -0.221123, 0.235435, 0.309665, -0.378032 )
bones/8/enabled = true
bones/8/bound_children = [  ]
bones/9/name = "BoneEyestalkLeftMiddle"
bones/9/parent = 8
bones/9/rest = Transform( 1, 2.17231e-07, 4.33574e-07, -2.17231e-07, 1, 3.1851e-07, -4.33574e-07, -3.18511e-07, 1, 2.23517e-08, 0.284034, -9.404e-08 )
bones/9/enabled = true
bones/9/bound_children = [  ]
bones/10/name = "BoneEyestalkLeftTop"
bones/10/parent = 9
bones/10/rest = Transform( 1, 1.09198e-07, -8.25731e-08, -1.09198e-07, 1, 1.25697e-08, 8.25731e-08, -1.25697e-08, 1, -1.11759e-08, 0.284034, 2.09921e-07 )
bones/10/enabled = true
bones/10/bound_children = [  ]
bones/11/name = "BoneEyeballLeftTarget"
bones/11/parent = 10
bones/11/rest = Transform( 0.992459, 0.121811, -0.0136893, -0.121811, 0.967609, -0.221123, -0.0136893, 0.221123, 0.97515, -0.0243413, 0.534082, 0.0138126 )
bones/11/enabled = true
bones/11/bound_children = [  ]
bones/12/name = "BoneEyestalkRightBottom"
bones/12/parent = 7
bones/12/rest = Transform( -0.990866, -0.134849, -2.15322e-06, -0.0298568, 0.219403, -0.975178, 0.131502, -0.96627, -0.221425, -0.186052, 0.309665, -0.372044 )
bones/12/enabled = true
bones/12/bound_children = [  ]
bones/13/name = "BoneEyestalkRightMiddle"
bones/13/parent = 12
bones/13/rest = Transform( 1, 6.13276e-07, 2.86064e-07, -6.13276e-07, 1, 3.51926e-07, -2.86064e-07, -3.51926e-07, 1, 2.6077e-08, 0.284019, 2.88559e-08 )
bones/13/enabled = true
bones/13/bound_children = [  ]
bones/14/name = "BoneEyestalkRightTop"
bones/14/parent = 13
bones/14/rest = Transform( 1, -4.4913e-07, -1.42789e-07, 4.4913e-07, 1, -4.52777e-08, 1.42789e-07, 4.52777e-08, 1, 1.49012e-08, 0.284019, 8.15662e-08 )
bones/14/enabled = true
bones/14/bound_children = [  ]
bones/15/name = "BoneEyeballRightTarget"
bones/15/parent = 14
bones/15/rest = Transform( 0.991206, -0.1315, 0.0148084, 0.1315, 0.96627, -0.221426, 0.0148087, 0.221426, 0.975065, 0.00552475, 0.539132, 0.0154762 )
bones/15/enabled = true
bones/15/bound_children = [  ]
bones/16/name = "BoneShell"
bones/16/parent = -1
bones/16/rest = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0564262, 0.342239, -0.0220091 )
bones/16/enabled = true
bones/16/bound_children = [  ]
bones/17/name = "BoneEyeballLeft"
bones/17/parent = -1
bones/17/rest = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, -0.340823, 1.44457, -1.20899 )
bones/17/enabled = true
bones/17/bound_children = [  ]
bones/18/name = "BoneEyeballRight"
bones/18/parent = -1
bones/18/rest = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0.397249, 1.44457, -1.20899 )
bones/18/enabled = true
bones/18/bound_children = [  ]
bones/19/name = "BoneEyestalkRightController"
bones/19/parent = -1
bones/19/rest = Transform( 0.999885, 0, -0.0151833, 0, 1, 0, 0.0151833, 0, 0.999885, 0.357374, 1.19536, -1.16828 )
bones/19/enabled = true
bones/19/bound_children = [  ]
bones/20/name = "BoneEyestalkLeftController"
bones/20/parent = -1
bones/20/rest = Transform( 0.999901, 0, 0.0140371, 0, 1, 0, -0.0140371, 0, 0.999901, -0.28544, 1.20253, -1.16828 )
bones/20/enabled = true
bones/20/bound_children = [  ]

[node name="Body" type="MeshInstance" parent="PlayerAvatar/Skeleton"]
mesh = ExtResource( 1 )
skin = SubResource( 3 )
material/0 = ExtResource( 5 )
material/1 = ExtResource( 8 )
material/2 = ExtResource( 4 )

[node name="IkFront" type="SkeletonIK" parent="PlayerAvatar/Skeleton"]
unique_name_in_owner = true
process_priority = 1
root_bone = "BoneFootTorso"
tip_bone = "BoneFootHead"
use_magnet = true
magnet = Vector3( 0, 0, -100 )
target_node = NodePath("../../../InverseKinematics/PositionFront")

[node name="IkBack" type="SkeletonIK" parent="PlayerAvatar/Skeleton"]
unique_name_in_owner = true
process_priority = 1
root_bone = "BoneFootWaist"
tip_bone = "BoneFootTail"
use_magnet = true
magnet = Vector3( 0, 0, -100 )
target_node = NodePath("../../../InverseKinematics/PositionBack")

[node name="InverseKinematics" type="Spatial" parent="."]

[node name="PositionFront" type="Position3D" parent="InverseKinematics"]
unique_name_in_owner = true
transform = Transform( -1, -1.52855e-14, -8.74228e-08, 8.74228e-08, -1.49012e-07, -1, 3.55271e-15, -1, 1.49012e-07, 0, 0, -0.5 )

[node name="MeshInstance" type="MeshInstance" parent="InverseKinematics/PositionFront"]
transform = Transform( -0.1, -1.68484e-15, -8.74228e-09, -1.65797e-15, -0.1, 3.67569e-08, -8.74228e-09, 3.67569e-08, 0.1, 0, 0, 0 )
mesh = SubResource( 29 )
skeleton = NodePath("../../PositionBack")

[node name="PositionBack" type="Position3D" parent="InverseKinematics"]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, -2.18557e-07, -1, 0, 1, -2.18557e-07, 0, 0, 0.9 )

[node name="MeshInstance" type="MeshInstance" parent="InverseKinematics/PositionBack"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = SubResource( 29 )

[node name="RayFront" type="RayCast" parent="InverseKinematics"]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
collision_mask = 12
collide_with_areas = true

[node name="RayBack" type="RayCast" parent="InverseKinematics"]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.9 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
collision_mask = 12
collide_with_areas = true

[node name="PositionFrontNull" type="Position3D" parent="InverseKinematics"]
unique_name_in_owner = true
transform = Transform( -1, -1.52855e-14, -8.74228e-08, 8.74228e-08, -1.49012e-07, -1, 3.55271e-15, -1, 1.49012e-07, 0, 0, -0.5 )

[node name="PositionBackNull" type="Position3D" parent="InverseKinematics"]
unique_name_in_owner = true
transform = Transform( 1, 3.38813e-21, 0, 0, -2.18557e-07, -1, 0, 1, -2.18557e-07, 0, 0, 0.9 )

[node name="IkInterpolation" type="Position3D" parent="InverseKinematics"]
transform = Transform( 1, 0, 0, 0, 1, -1.74846e-07, 0, 1.74846e-07, 1, 0, 5.96046e-08, -5.96046e-08 )

[node name="PlayerCollision" type="CollisionShape" parent="."]
transform = Transform( 0.45, 0, 0, 0, 0.45, 0, 0, 0, 0.45, 0, 0.44, 0.25 )
shape = SubResource( 28 )

[node name="Checkers" type="Spatial" parent="."]

[node name="CheckerFloor" type="Area" parent="Checkers"]
unique_name_in_owner = true
transform = Transform( -0.4, 0, 0, 0, 0.15, 0, 0, 0, -0.8, 0, 0, 0 )

[node name="CheckerFloorCollision" type="CollisionShape" parent="Checkers/CheckerFloor"]
shape = SubResource( 26 )

[node name="PlayerArea" type="Area" parent="Checkers"]

[node name="PlayerHitbox" type="CollisionShape" parent="Checkers/PlayerArea"]
transform = Transform( 0.7, 0, 0, 0, 0.9, 0, 0, 0, 1.4, 0, 0.45, 0 )
shape = SubResource( 24 )

[node name="RayDown" type="RayCast" parent="Checkers"]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0.1 )
enabled = true
collision_mask = 12
collide_with_areas = true

[node name="Gui" type="Node" parent="."]

[node name="InteractionLabel" type="RichTextLabel" parent="Gui"]
anchor_left = 0.4
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -131.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "Press A to Interact"
text = "Press A to Interact"
scroll_active = false

[node name="TimerPoison" type="Timer" parent="Gui"]
wait_time = 0.5

[node name="AllowJump" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Animation" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animation"]
playback_default_blend_time = 0.1
anims/PlayerFallDefault = ExtResource( 23 )
anims/PlayerHideDefault = ExtResource( 22 )
anims/PlayerIdleDefault = ExtResource( 18 )
anims/PlayerJumpDefault = ExtResource( 21 )
anims/PlayerMoveDefault = ExtResource( 10 )
anims/PlayerRollBack = ExtResource( 25 )
anims/PlayerRollFront = ExtResource( 20 )
anims/PlayerRollLeft = ExtResource( 16 )
anims/PlayerRollRight = ExtResource( 17 )
anims/PlayerTuckDefault = ExtResource( 19 )
